Subpixel rendering: Transform origin is miscalculated when RenderLayer's offsetfromRenderer has device pixel fraction value. https://bugs.webkit.org/show_bug.cgi?id=129859

Reviewed by Simon Fraser.

We need to calculate the transformed origin using the painting coordinates to produce
pixel precise result.

Source/WebCore:

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
(WebCore::RenderLayerBacking::computeTransformOriginForPainting):
* rendering/RenderLayerBacking.h:

LayoutTests:

* compositing/columns/composited-columns-expected.txt:
* compositing/geometry/limit-layer-bounds-opacity-transition-expected.txt:
* compositing/repaint/resize-repaint-expected.txt:
* platform/mac/compositing/repaint/invalidations-on-composited-layers-expected.txt:
* platform/mac/compositing/visibility/visibility-image-layers-dynamic-expected.txt:


Canonical link: https://commits.webkit.org/148443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165892 268f45cc-cd09-0410-ab3c-d52691b4dbfc